# lemuri-network-manager

./: CMakeLists.txt
session-agent/: AvailableConnectionsModel.cpp  AvailableConnectionsModel.h  AvailableConnectionsSortModel.cpp  AvailableConnectionsSortModel.h  CMakeLists.txt  DeviceConnectionModel.cpp  IconProvider.cpp  application.qrc  interfacemanager.cpp  interfacemanager.h  main.cpp  passworddialog.cpp  passworddialog.h  passworddialog.ui  secretagent.cpp  secretagent.h  trayicon.cpp  trayicon.h
session-agent/qml/: Connection.qml  main.qml
